--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ body {
     line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
     font-family: "Playfair Display";
     letter-spacing: 5px;
-    font-weight: 500;
+    font-weight: 400;
     margin: 10px 0;
+}
+h1 {
+    font-size: 30px;
+    color: #6B6D71;
+}
+h2 {
+    font-size: 35px;
 }
 
 .heading-center{
@@ -142,8 +149,7 @@ hr{
     border: none;
     padding: 10px 20px;
     margin: 10px 0;
-
-
+    font-family: PlayFair Display;
 }
 
 #submit-button:hover{
